Corrected layout bug.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,6 @@
 .App {
   text-align: center;
   font-family: 'Sanchez', serif;
-  width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-image: linear-gradient(to right,#35dc9b, #f4e2d8);
 }
