--- a/src/Login/Form.module.css
+++ b/src/Login/Form.module.css
@@ -5,7 +5,7 @@
     flex-grow: 0;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 .formh1 {
     margin: 0 auto 40px;
